"""
This module defines the `Plan` class.

"""

from dataclasses import dataclass
from datetime import date
from app import db


@dataclass(init=False, repr=True, eq=True)
class Plan(db.Model):
    """
    Represents a plan in the system.


    """
    __tablename__ = 'plan'
    id: int = db.Column(db.Integer, primary_key=True, autoincrement=True)
    nombre: str = db.Column(db.String(100), nullable=False)
    fecha_inicio: date = db.Column(db.Date, nullable=False)
    fecha_fin: date = db.Column(db.Date, nullable=False)
    observacion: str = db.Column(db.String(255), nullable=True)
